added name of madrasa

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <div id="loginSection">
+        <h2 style="color:rgb(33, 235, 33);">ISHA ATHUL ULOOM MADRASA</h2>
+        <h5 style="color:yellowgreen;">MEELAD FEST RESULT PAGE</h5>
         <form id="loginForm">
             <label for="role">Login as:</label>
             <select id="role" required>
@@ -17,6 +19,7 @@
             <input type="password" id="adminPass" placeholder="Admin Password" style="display:none;" />
             <button type="submit">Login</button>
         </form>
+        <h6 style="color:red;">**Login as user to see the result**</h6>
     </div>
 
     <div id="mainSection" style="display:none;">
