added name of madrasa color chnge

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="loginSection">
         <h4 style="color:rgb(33, 235, 33);">ISHA ATHUL ULOOM MADRASA</h4>
-        <h5 style="color:yellowgreen;">MEELAD FEST RESULT PAGE</h5>
+        <h5 style="color:yellow;">MEELAD FEST RESULT PAGE</h5>
         <form id="loginForm">
             <label for="role">Login as:</label>
             <select id="role" required>
