--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
 
         <div id="leaderboard" style="margin: 1em 0; font-weight: bold;"></div>
         <div id="leaderStatus" style="text-align:center; font-size:1.2rem; font-weight:bold; color:#ffe066; margin-bottom:1em;"></div>
+        <div id="leaderStatus"></div>
 
         <table id="categoryTable" border="1" cellpadding="5" style="margin-bottom:1em;">
             <thead>
