last touch remains

--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
         <div id="leaderboard" style="margin: 1em 0; font-weight: bold;"></div>
         <div id="leaderStatus" style="text-align:center; font-size:1.2rem; font-weight:bold; color:#ffe066; margin-bottom:1em;"></div>
         <div id="leaderStatus"></div>
+        <div id="winnerBanner" style="display:none; margin-top: 20px; font-size: 1.5rem; font-weight: bold; text-align:center;"></div>
 
         <table id="categoryTable" border="1" cellpadding="5" style="margin-bottom:1em;">
             <thead>
@@ -112,6 +113,10 @@
             </table>
             <button id="addSeniorBtn" class="admin-only">Add Game</button>
         </div>
+       <button id="generateResultBtn" class="admin-only">🏆 Generate Result</button>
+<button id="undoResultBtn" class="admin-only" style="display:none;">↩️ Undo Result</button>
+
+
         <button id="uploadBtn" class="admin-only" style="margin-top:1em;">Upload & Update Users</button>
     </div>
 
