--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
 </head>
 <body>
     <div id="loginSection">
-        <h4 style="color:rgb(33, 235, 33);">ISHA ATHUL ULOOM MADRASA</h4>
-        <h5 style="color:yellow;">MEELAD FEST RESULT PAGE</h5>
+         <h3 style="color:rgb(214, 164, 0);">THAJDARE MADEENA MEELAD FEST 2025</h3>
+        <h4 style="color:rgb(33, 235, 33);">ISHA ATHUL ULOOM MADRASA KUNNIL</h4>
+        
         <form id="loginForm">
+            <h4 style="color:yellow;">MEELAD FEST RESULT PAGE</h4>
             <label for="role">Login as:</label>
             <select id="role" required>
                 <option value="user">User</option>
@@ -19,7 +21,7 @@
             <input type="password" id="adminPass" placeholder="Admin Password" style="display:none;" />
             <button type="submit">Login</button>
         </form>
-        <h6 style="color:red;">**Login as user to see the result**</h6>
+        <h3 style="color:rgb(224, 195, 195);">**Login as user to see the result**</h3>
     </div>
 
     <div id="mainSection" style="display:none;">
@@ -40,8 +42,8 @@
             <thead>
                 <tr>
                     <th>Category</th>
-                    <th>Team A</th>
-                    <th>Team B</th>
+                    <th>JAISHE JAMAL</th>
+                    <th>JAISHE JALAL</th>
                 </tr>
             </thead>
             <tbody>
@@ -77,7 +79,7 @@
             <h3>Kids</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>Team A</th><th>Team B</th><th class="admin-only">Remove</th></tr>
+                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
                 </thead>
                 <tbody id="kidsTableBody"></tbody>
             </table>
@@ -87,7 +89,7 @@
             <h3>Sub Junior</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>Team A</th><th>Team B</th><th class="admin-only">Remove</th></tr>
+                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
                 </thead>
                 <tbody id="subjuniorTableBody"></tbody>
             </table>
@@ -97,7 +99,7 @@
             <h3>Junior</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>Team A</th><th>Team B</th><th class="admin-only">Remove</th></tr>
+                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
                 </thead>
                 <tbody id="juniorTableBody"></tbody>
             </table>
@@ -107,7 +109,7 @@
             <h3>Senior</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>Team A</th><th>Team B</th><th class="admin-only">Remove</th></tr>
+                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
                 </thead>
                 <tbody id="seniorTableBody"></tbody>
             </table>
