--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,18 @@
             <h3>Kids</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
+<tr>
+  <th>#</th>
+  <th>Item</th>
+  <th>Gender</th>
+  <th>Winner</th>
+  <th>Runner</th>
+  <th>JAISHE <br>
+    JAMAL</th>
+  <th>JAISHE <br>
+    JALAL</th>
+  <th class="admin-only">Remove</th>
+</tr>
                 </thead>
                 <tbody id="kidsTableBody"></tbody>
             </table>
@@ -89,7 +100,18 @@
             <h3>Sub Junior</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
+<tr>
+  <th>#</th>
+ <th>Item</th>
+  <th>Gender</th>
+  <th>Winner</th>
+  <th>Runner</th>
+  <th>JAISHE <br>
+    JAMAL</th>
+  <th>JAISHE <br>
+    JALAL</th>
+  <th class="admin-only">Remove</th>
+</tr>
                 </thead>
                 <tbody id="subjuniorTableBody"></tbody>
             </table>
@@ -99,7 +121,18 @@
             <h3>Junior</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
+<tr>
+  <th>#</th>
+  <th>Item</th>
+  <th>Gender</th>
+  <th>Winner</th>
+  <th>Runner</th>
+  <th>JAISHE <br>
+    JAMAL</th>
+  <th>JAISHE <br>
+    JALAL</th>
+  <th class="admin-only">Remove</th>
+</tr>
                 </thead>
                 <tbody id="juniorTableBody"></tbody>
             </table>
@@ -109,7 +142,18 @@
             <h3>Senior</h3>
             <table border="1" cellpadding="5">
                 <thead>
-                    <tr><th>#</th><th>Game Name</th><th>JAISHE JAMAL</th><th>JAISHE JALAL</th><th class="admin-only">Remove</th></tr>
+<tr>
+  <th>#</th>
+  <th>Item</th>
+  <th>Gender</th>
+  <th>Winner</th>
+  <th>Runner</th>
+  <th>JAISHE <br>
+    JAMAL</th>
+  <th>JAISHE <br>
+    JALAL</th>
+  <th class="admin-only">Remove</th>
+</tr>
                 </thead>
                 <tbody id="seniorTableBody"></tbody>
             </table>
